@@ -58,7 +58,7 @@
         <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
-            <version>3.3</version>
+            <version>3.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
