@@ -82,7 +82,7 @@
         <module>classloading</module>
     </modules>
     <properties>
-        <easymock.version>3.3.1</easymock.version>
+        <easymock.version>3.4</easymock.version>
         <mockito.version>1.10.19</mockito.version>
     </properties>
     <build>
@@ -116,17 +116,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.4</version>
-                <configuration>
-                    <reportPlugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-javadoc-plugin</artifactId>
-                            <configuration>
-                                <additionalparam>-Xdoclint:none</additionalparam>
-                            </configuration>
-                        </plugin>
-                    </reportPlugins>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
